--- a/.gitmodules
+++ b/.gitmodules
@@ -6,7 +6,7 @@
 	url = https://github.com/yimian/frida-core.git
 [submodule "frida-python"]
 	path = frida-python
-	url = https://github.com/frida/frida-python.git
+	url = https://github.com/yimian/frida-python.git
 [submodule "frida-node"]
 	path = frida-node
 	url = https://github.com/frida/frida-node.git
