--- a/releng/modules/frida-gadget-ios/package.json
+++ b/releng/modules/frida-gadget-ios/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frida-gadget-ios",
+  "name": "@yimian/frida-gadget-ios",
   "version": "0.0.0",
   "description": "Gadget for iOS",
   "main": "index.js",
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/frida/frida/issues"
   },
-  "homepage": "https://github.com/frida/frida#readme"
+  "homepage": "https://github.com/frida/frida#readme",
+  "publishConfig": {
+    "@yimian:registry": "https://npm.pkg.github.com"
+  }
 }
